--- a/app/src/main/res/layout/em_activity_sign_up.xml
+++ b/app/src/main/res/layout/em_activity_sign_up.xml
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/logo_margin"
-                    android:src="@drawable/em_logo_green"
+                    android:src="@drawable/poc_logo"
                     />
                 <TextView
                     android:layout_width="match_parent"
