--- a/app/src/main/res/layout/em_fragment_contact_list.xml
+++ b/app/src/main/res/layout/em_fragment_contact_list.xml
@@ -93,6 +93,41 @@
             />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/layout_chatroom_entry"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/contact_item_height"
+        android:background="?android:attr/selectableItemBackground"
+        android:paddingLeft="@dimen/group_icon_padding_left"
+        >
+
+        <ImageView
+            android:id="@+id/img_chatroom_icon"
+            android:layout_width="@dimen/contact_avatar_size"
+            android:layout_height="@dimen/contact_avatar_size"
+            android:layout_centerVertical="true"
+            android:src="@drawable/cell_groups"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/group_text_margin_left"
+            android:layout_toRightOf="@id/img_chatroom_icon"
+            android:text="@string/em_chatrooms"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/group_text_size"
+            />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingRight="@dimen/group_arrow_right_icon"
+            android:src="@drawable/cell_chevron_right"
+            />
+    </RelativeLayout>
+
     <ProgressBar
         android:id="@+id/progressbar"
         android:layout_width="wrap_content"
