--- a/app/src/main/res/menu/em_chat_menu.xml
+++ b/app/src/main/res/menu/em_chat_menu.xml
@@ -14,6 +14,13 @@
         app:showAsAction="always"
         />
     <item
+        android:id="@+id/menu_clear_message"
+        android:icon="@drawable/ic_delete_white_24dp"
+        android:title="@string/em_clear_all_message"
+        app:showAsAction="always"
+        />
+
+    <item
         android:id="@+id/menu_group_detail"
         android:icon="@android:drawable/ic_menu_info_details"
         android:title="detail"
@@ -26,5 +33,4 @@
         android:title="detail"
         android:visible="false"
         app:showAsAction="always"/>
-
 </menu>
