--- a/app/src/main/res/layout/em_muc_list_item_vertical.xml
+++ b/app/src/main/res/layout/em_muc_list_item_vertical.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/text_member_name"
-        android:layout_width="@dimen/group_item_avatar_size"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:ellipsize="end"
